--- a/responsive.css
+++ b/responsive.css
@@ -31,6 +31,18 @@
   margin-top: 50px;
 }
 
+/* --------------section-3 style------------- */
+
+.card-container {
+  width: 100%;
+  height: 400px;
+  grid-template-columns: repeat(2,2fr);
+  gap: 70px;
+  justify-content: space-between;
+  margin: auto;
+
+}
+
   
 }
 
@@ -87,7 +99,15 @@
   margin-top: 50px;
 }
 
+/* --------------section-3 style------------- */
 
 
+.card-container {
+  width: 100%;
+  grid-template-columns: repeat(1,4fr);
+  gap: 100px;
+  justify-content: space-between;
+  margin: auto;
 
+}
 }
