--- a/style.css
+++ b/style.css
@@ -24,6 +24,12 @@
   font-weight: 400;
   line-height: 30px;
 }
+
+.public-liner-gradient{
+  background: linear-gradient(180deg, #f948b2, #8758f1);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 /* --------------nav section------------------ */
 nav {
   width: 80%;
@@ -47,7 +53,7 @@ nav {
   margin-left: 20px;
 }
 
-span {
+website-name-title {
   color: #ff42a5;
 }
 .nav-menu {
@@ -163,4 +169,68 @@ span {
   font-family: Work Sans;
   font-size: 48px;
   font-weight: 700;
+}
+
+/* --------------section-3 style------------- */
+.funny-video-title{
+  color: #0B0223;
+  text-align: center;
+  font-size: 48px;
+  font-weight: 700;
+  margin-bottom: 0px;
+}
+
+.card-container {
+  width: 80%;
+  height: 400px;
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  justify-content: space-between;
+  margin: auto;
+  gap: 20px;
+}
+
+.card {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  position: relative;
+}
+.game-img {
+  width: 100%;
+  height: 100%;
+}
+
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: 0.3s ease;
+  background-color: black;
+}
+
+.card:hover .overlay {
+  opacity: 0.7;
+  border: 2px solid #ff42a5;
+  border-radius: 8px;
+  cursor: pointer;
+}
+.fa-play {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+.watch {
+  font-size: 25px;
+  color: red;
+
 }
