--- a/style.css
+++ b/style.css
@@ -25,8 +25,14 @@
   line-height: 30px;
 }
 
-.public-liner-gradient{
+.public-liner-gradient {
   background: linear-gradient(180deg, #f948b2, #8758f1);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.public-title-style {
+  background: linear-gradient(180deg, #f948b2 0%, #8758f1 100%);
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -101,7 +107,11 @@ website-name-title {
   background-size: cover;
   width: 50%;
   background-position: center;
-  fill: linear-gradient(223deg, rgba(140, 87, 238, 0.03) 0%, rgba(241, 68, 174, 0.03) 100%);
+  fill: linear-gradient(
+    223deg,
+    rgba(140, 87, 238, 0.03) 0%,
+    rgba(241, 68, 174, 0.03) 100%
+  );
 }
 .goat-items {
   margin-left: 20%;
@@ -144,20 +154,27 @@ website-name-title {
 }
 .image-container {
   width: 50%;
-  fill: linear-gradient(223deg, rgba(140, 87, 238, 0.03) 0%, rgba(241, 68, 174, 0.03) 100%);
+  fill: linear-gradient(
+    223deg,
+    rgba(140, 87, 238, 0.03) 0%,
+    rgba(241, 68, 174, 0.03) 100%
+  );
 }
 .first-section-iamge {
   width: 90%;
   background-position: center;
   height: 100%;
-  
 }
 /* ---------------Section-2 style--------------- */
 
 .main-menu-second-container {
   display: flex;
   justify-content: space-between;
-  background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(255, 66, 165, 0.03) 0%,
+    rgba(255, 66, 165, 0.03) 100%
+  );
 }
 .we-are-container {
   width: 50%;
@@ -172,8 +189,8 @@ website-name-title {
 }
 
 /* --------------section-3 style------------- */
-.funny-video-title{
-  color: #0B0223;
+.funny-video-title {
+  color: #0b0223;
   text-align: center;
   font-size: 48px;
   font-weight: 700;
@@ -182,17 +199,18 @@ website-name-title {
 
 .card-container {
   width: 80%;
-  height: 400px;
+  max-height: 400px;
   display: grid;
-  grid-template-columns: repeat(4,1fr);
+  grid-template-columns: repeat(4, 1fr);
   justify-content: space-between;
   margin: auto;
   gap: 20px;
+  margin-bottom: 10px;
 }
 
 .card {
-  width: 100%;
-  height: 100%;
+  width: 342px;
+  height: 400px;
   border-radius: 5px;
   position: relative;
 }
@@ -200,7 +218,6 @@ website-name-title {
   width: 100%;
   height: 100%;
 }
-
 
 .overlay {
   position: absolute;
@@ -232,5 +249,177 @@ website-name-title {
 .watch {
   font-size: 25px;
   color: red;
+}
+/* ------------------section-4 style------------------- */
+.play-instantly-container {
+  display: flex;
+  justify-content: space-around;
+  width: 70%;
+  margin: 0px auto;
+  margin-top: 150px;
+  align-items: center;
+}
 
+.play-instantly {
+  width: 400px;
+  height: 450px;
+}
+.img-container img {
+  width: 400px;
+  height: 450px;
+  border-radius: 8px;
+  margin-left: 50px;
+}
+.courton-image img {
+  width: 150px;
+  height: 200px;
+  border-radius: 8px;
+  border: 10px solid #fff;
+}
+
+.courton-image {
+  position: relative;
+  bottom: 150px;
+  right: 100px;
+}
+/* ------------------section-5 style------------------- */
+.play-game-container {
+  display: flex;
+  justify-content: space-around;
+  width: 80%;
+  margin: 0px auto;
+  align-items: center;
+  gap: 200px;
+}
+.img-container1 img {
+  width: 400px;
+  height: 450px;
+  border-radius: 8px;
+  margin-left: 50px;
+}
+
+.courton1-image img {
+  width: 150px;
+  height: 200px;
+  border-radius: 8px;
+  border: 10px solid #fff;
+}
+.courton1-image {
+  position: relative;
+  bottom: 150px;
+  left: 350px;
+}
+.play {
+  margin-top: -300px;
+  width: 483px;
+}
+/* -------------section6--------------- */
+.service {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  color: #0b0223;
+  font-size: 1rem;
+  font-weight: 600;
+  border-radius: 50px;
+  background-color: white;
+  border: none;
+  width: 243px;
+  height: 80px;
+  cursor: pointer;
+}
+.services-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 400px;
+  padding: 0px 150px;
+  gap: 30px;
+  background: linear-gradient(
+    90deg,
+    rgba(255, 66, 165, 0.03) 0%,
+    rgba(255, 66, 165, 0.03) 100%
+  );
+}
+.service:hover {
+  border: 1px solid #ff42a5;
+  color: #ff42a5;
+  transition: 0.5s;
+}
+
+/* ------------footer section style----------- */
+footer {
+  width: 100%;
+  height: 636px;
+  background: #0b0223;
+  text-align: center;
+}
+.footer-logo-container {
+  display: flex;
+  color: #fff;
+  padding-top: 120px;
+  margin-bottom: 0px;
+  align-items: center;
+  justify-content: center;
+}
+.footer-span {
+  background: linear-gradient(90deg, #ff42a5 0%, #ff42a5 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.footer-nav {
+  text-align: center;
+  font-size: 18px;
+  font-weight: 600;
+  text-decoration: none;
+  margin: 30px;
+  margin-top: 66px;
+}
+
+.footer-nav a {
+  text-decoration: none;
+  margin: 0px 30px;
+  color: #fff;
+}
+
+.privacy-nav {
+  color: rgba(255, 255, 255, 0.6);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+}
+.fev-icone-container {
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  text-align: center;
+  margin: 70px 0px;
+  font-size: 30px;
+}
+
+.fev-icone-container fa-brands {
+  color: #fff;
+  align-items: center;
+  gap: 40px;
+}
+
+.privacy-nav a {
+  color: rgba(255, 255, 255, 0.6);
+  text-decoration: none;
+  margin: 0px 30px;
+  margin-top: 75px;
+}
+
+.copy-right {
+  color: rgba(255, 255, 255, 0.6);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
 }
